[project]
name = "ancient-china-map"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Lam",email = "72969119+alex-tw-lam@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium (>=0.20.0,<0.21.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
